auth persistence implemented

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
     "@rebass/emotion": "^3.0.0",
+    "cheerio": "^1.0.0-rc.2",
+    "puppeteer": "^1.13.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -13,7 +15,10 @@
     "react-scripts": "2.1.8",
     "rebass": "^3.0.1",
     "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "semantic-ui-sidebar": "^2.3.1"
