--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "rebass": "^3.0.1",
