--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rebass/emotion": "^3.0.0",
     "cheerio": "^1.0.0-rc.2",
     "mdbreact": "^4.11.1",
+    "package.json": "^2.0.1",
     "puppeteer": "^1.13.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
